unpackaged/main/default/objects/Envelope_Field__mdt/Envelope_Field__mdt.object-meta.xml
<CustomObject>
    <label>Envelope Field</label>
    <pluralLabel>Envelope Fields</pluralLabel>
</CustomObject>