unpackaged/main/default/objects/Envelope_Field__mdt/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Person</fullName>
                <default>true</default>
                <label>Person</label>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Retirement Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>