unpackaged/main/default/objects/Envelope_Field__mdt/fields/Add_Record__c.field-meta.xml
<CustomField>
    <fullName>Add_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Record</label>
    <type>Checkbox</type>
</CustomField>