unpackaged/main/default/objects/Envelope_Field__mdt/fields/Add_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Add_Record_Type__c</fullName>
    <label>Add Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorized Person</fullName>
            </value>
            <value>
                <fullName>Beneficial Owner</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Grantor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>