unpackaged/main/default/objects/Envelope_Field__mdt/fields/Field_Type_Override__c.field-meta.xml
<CustomField>
    <fullName>Field_Type_Override__c</fullName>
    <label>Field Type Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Dual Listbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>