unpackaged/main/default/objects/Envelope_Field__mdt/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <label>Filter Criteria</label>
    <type>TextArea</type>
</CustomField>