unpackaged/main/default/objects/Envelope_Field__mdt/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <description>Named input format for the field. Drives the input mask, the client pattern, and the server-side format check from one library (WizardFieldValidator.FORMATS). When set, it supersedes Pattern__c/Pattern_Error__c, which remain as an escape hatch for one-off fields.</description>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSN</fullName>
            </value>
            <value>
                <fullName>EIN</fullName>
            </value>
            <value>
                <fullName>SSN or EIN</fullName>
            </value>
            <value>
                <fullName>US ZIP</fullName>
            </value>
            <value>
                <fullName>US Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>