unpackaged/main/default/objects/Envelope_Field__mdt/fields/Key_Decision__c.field-meta.xml
<CustomField>
    <fullName>Key_Decision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Decision</label>
    <type>Checkbox</type>
</CustomField>