unpackaged/main/default/objects/Envelope_Field__mdt/fields/Max__c.field-meta.xml
<CustomField>
    <fullName>Max__c</fullName>
    <description>Upper bound for number/date fields. Decimal literal (e.g. 400, 100), ISO date, or the token TODAY (resolved in Apex). Blank = unbounded.</description>
    <label>Max</label>
    <length>40</length>
    <type>Text</type>
</CustomField>