unpackaged/main/default/objects/Envelope_Field__mdt/fields/Min__c.field-meta.xml
<CustomField>
    <fullName>Min__c</fullName>
    <description>Lower bound for number/date fields. Decimal literal (e.g. 0), ISO date (e.g. 1900-01-01), or the token TODAY (resolved in Apex). Blank = unbounded.</description>
    <label>Min</label>
    <length>40</length>
    <type>Text</type>
</CustomField>