unpackaged/main/default/objects/Envelope_Field__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Financial_Account__c</fullName>
            </value>
            <value>
                <fullName>Service__c</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Order_Ticket__c</fullName>
            </value>
            <value>
                <fullName>Product_Filter_Lookup__c</fullName>
            </value>
            <value>
                <fullName>Financial_Account_Related_Product__c</fullName>
            </value>
            <value>
                <fullName>Standing_Letter_of_Authorization__c</fullName>
            </value>
            <value>
                <fullName>FinServ__FinancialAccount__c</fullName>
            </value>
            <value>
                <fullName>Advertising_Item__c</fullName>
            </value>
            <value>
                <fullName>Check_Deposit__c</fullName>
            </value>
            <value>
                <fullName>Check_Log__c</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>