unpackaged/main/default/objects/Envelope_Field__mdt/fields/Original_Account_Field__c.field-meta.xml
<CustomField>
    <fullName>Original_Account_Field__c</fullName>
    <label>Original Account Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>