unpackaged/main/default/objects/Envelope_Field__mdt/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <description>Anchored regex the field value must fully match. Blank = no format rule. Full-match semantics on both layers: Apex Pattern.matches and lightning-input pattern.</description>
    <label>Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>