unpackaged/main/default/objects/Envelope_Field__mdt/fields/Pattern_Error__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Error__c</fullName>
    <description>User-facing message shown when the value fails Pattern__c or the Min__c/Max__c bounds (client inline message and server error text).</description>
    <label>Pattern Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>