unpackaged/main/default/objects/Envelope_Field__mdt/fields/Required_WHERE_Statement__c.field-meta.xml
<CustomField>
    <fullName>Required_WHERE_Statement__c</fullName>
    <label>Required WHERE Statement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>