unpackaged/main/default/objects/Envelope_Field__mdt/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <label>Section Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>