unpackaged/main/default/objects/Envelope_Field__mdt/fields/Shown_WHERE_Statement__c.field-meta.xml
<CustomField>
    <fullName>Shown_WHERE_Statement__c</fullName>
    <label>Shown WHERE Statement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>