unpackaged/main/default/objects/Envelope_Field__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client - Individual</fullName>
                <default>true</default>
                <label>Client - Individual</label>
            </value>
            <value>
                <fullName>Client - Business</fullName>
            </value>
            <value>
                <fullName>Client - Trust</fullName>
            </value>
            <value>
                <fullName>ISA - Fin Acct</fullName>
            </value>
            <value>
                <fullName>ISA - Service Agreement</fullName>
            </value>
            <value>
                <fullName>Authorized Person</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Beneficial Owner</fullName>
            </value>
            <value>
                <fullName>Grantor - Revocable Trust</fullName>
            </value>
            <value>
                <fullName>Grantor - Irrevocable Trust</fullName>
            </value>
            <value>
                <fullName>Client - Retirement Plan</fullName>
            </value>
            <value>
                <fullName>Service Plan</fullName>
            </value>
            <value>
                <fullName>Control Person</fullName>
            </value>
            <value>
                <fullName>Additional Funding</fullName>
            </value>
            <value>
                <fullName>Third Party Money Movement</fullName>
            </value>
            <value>
                <fullName>Account Closure</fullName>
            </value>
            <value>
                <fullName>Change of Registration</fullName>
            </value>
            <value>
                <fullName>Manage DMS Instructions</fullName>
            </value>
            <value>
                <fullName>Manage Statement of Investment Selection</fullName>
            </value>
            <value>
                <fullName>Manage AMS+ Instructions</fullName>
            </value>
            <value>
                <fullName>Change Management Style</fullName>
            </value>
            <value>
                <fullName>AML Documentation</fullName>
            </value>
            <value>
                <fullName>Alternative Investment</fullName>
            </value>
            <value>
                <fullName>ISA - DPI</fullName>
            </value>
            <value>
                <fullName>Business Related Party</fullName>
            </value>
            <value>
                <fullName>Trust Related Party</fullName>
            </value>
            <value>
                <fullName>Trusted Contact</fullName>
            </value>
            <value>
                <fullName>Retirement Plan Related Party</fullName>
            </value>
            <value>
                <fullName>Standard Case</fullName>
            </value>
            <value>
                <fullName>Standard Advertising Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>