unpackaged/main/default/objects/Envelope_Field__mdt/fields/Type_Override__c.field-meta.xml
<CustomField>
    <fullName>Type_Override__c</fullName>
    <label>Type Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client - Individual</fullName>
            </value>
            <value>
                <fullName>Client - Business</fullName>
            </value>
            <value>
                <fullName>Client - Trust</fullName>
            </value>
            <value>
                <fullName>ISA - Fin Acct</fullName>
            </value>
            <value>
                <fullName>ISA - Service Agreement</fullName>
            </value>
            <value>
                <fullName>Client - Authorized Person</fullName>
            </value>
            <value>
                <fullName>Client - Trustee</fullName>
            </value>
            <value>
                <fullName>Client - Beneficial Owner</fullName>
            </value>
            <value>
                <fullName>Client - Revocable Trust</fullName>
            </value>
            <value>
                <fullName>Client - Irrevocable Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>