unpackaged/main/default/objects/Envelope_Field__mdt/listViews/All_with_Types.listView-meta.xml
<ListView>
    <fullName>All_with_Types</fullName>
    <columns>MasterLabel</columns>
    <columns>Type__c</columns>
    <columns>Label__c</columns>
    <columns>DeveloperName</columns>
    <columns>Object__c</columns>
    <columns>Section_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with Types</label>
</ListView>