unpackaged/main/default/objects/Envelope_Field__mdt/listViews/ISA_Services.listView-meta.xml
<ListView>
    <fullName>ISA_Services</fullName>
    <columns>DeveloperName</columns>
    <columns>Label__c</columns>
    <columns>Object__c</columns>
    <columns>Field_API__c</columns>
    <columns>Required__c</columns>
    <columns>Required_WHERE_Statement__c</columns>
    <columns>Shown_WHERE_Statement__c</columns>
    <columns>Section_Name__c</columns>
    <columns>Order__c</columns>
    <columns>MasterLabel</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>ISA - Service Agreement</value>
    </filters>
    <label>ISA - Services</label>
</ListView>