unpackaged/main/default/objects/Envelope_Field__mdt/listViews/Manage_DMS_Instructions_Records.listView-meta.xml
<ListView>
    <fullName>Manage_DMS_Instructions_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Label__c</columns>
    <columns>Object__c</columns>
    <columns>Field_API__c</columns>
    <columns>Required__c</columns>
    <columns>Required_WHERE_Statement__c</columns>
    <columns>Shown_WHERE_Statement__c</columns>
    <columns>Section_Name__c</columns>
    <columns>Order__c</columns>
    <columns>Add_Record__c</columns>
    <columns>Add_Record_Type__c</columns>
    <columns>Field_Type_Override__c</columns>
    <columns>Key_Decision__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Manage DMS Instructions</value>
    </filters>
    <label>Manage DMS Instructions Records</label>
</ListView>